--- a/src/pages/NuestrosCafes/NuestrosCafes.scss
+++ b/src/pages/NuestrosCafes/NuestrosCafes.scss
@@ -5,6 +5,8 @@
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    padding-top: 140px;
+    box-sizing: border-box;
 
     &__block {
         display: flex;
@@ -52,6 +54,7 @@
     }
     @media (max-width: 675px) {
         height: auto;
+        padding-top: 0;
         &__block {
             background: url(../../assets/images/aboutus-movil.jpg);
             background-size: cover;
